@@ -1,3 +1,7 @@
+2001-08-20  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* library/console.tcl: fixed some regexps to work better in 8.1+
+
 2001-06-25  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* library/calculator.tcl:
